--- a/app/index.html
+++ b/app/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="theme-color" content="#673ab8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="manifest" href="manifest.json">
     <title>Preact minimal structure</title>
 </head>
 <body>
-    <div id="root"></div>
+    <header>
+        <h1>Preact minimal 🚀</h1>
+    </header>
+    <section id="root"></section>
 </body>
 </html>
